fix: reset scrollbar

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -71,7 +71,7 @@
 .modalContentText {
   color: $tertiaryGray;
 
-  padding: 4rem 5.2rem 2.4rem 4rem;
+  padding: 4rem 4rem 2.4rem;
 }
 
 .modalFooter {
